# pysap-fmri

./: .gitignore  README.rst  Typical_Recon_Script.ipynb  Untitled.ipynb  dat.ipynb  global.ipynb  pyproject.toml  setup.py  test1.ipynb  test2.ipynb
.github/workflows/: test.yaml
acquisitions/: base.py  non_cartesian.py
analysers/: __init__.py
fmri/: __init__.py  utils.py
fmri/acquisitions/: __init__.py  acquisition.py  base.py  cartesian.py  non_cartesian.py  utils.py
fmri/operators/: __init__.py  fft.py  fourier.py  gradient.py  proximity.py  proxtv.py  svt.py  time_op.py  utils.py  wavelet.py  weighted.py
fmri/operators/utils/: __init__.py  fft.py  utils.py
fmri/reconstructor/: base.py
fmri/reconstructors/: __init__.py  base.py  frame_based.py  full.py  time_aware.py  utils.py
fmri/simulation/: cartesian.py  noise.py
fmri/simulations/: README.rst  __init__.py  activations.py  cartesian.py  extras.py  noise.py  phantoms.py  scenarios.py  smaps.py  utils.py
fmri/simulations/scenarios/: base.py
fmri/simulations/utils/: noise.py  phantoms.py
fmri/visualisation/: __init__.py  images.py  utils.py
fmri/viz/: __init__.py  images.py
src/fmri/: __init__.py  optimizer.py
src/fmri/operators/: __init__.py  fourier.py  gradient.py  proximity.py  svt.py  time_op.py  wavelet.py  weighted.py
src/fmri/operators/utils/: __init__.py  fft.py  proxtv.py  utils.py
src/fmri/reconstructors/: __init__.py  base.py  frame_based.py  time_aware.py  utils.py
src/fmri/viz/: __init__.py  images.py  utils.py
tests/: test_fourier.py
