[project]
name = "pysap-fmri"
version = "0.0.0"
description = "Python Sparse data Analysis Package external fMRI plugin."
authors = [{name="Pierre-antoine Comby", email="pierre-antoine.comby@crans.org"}]

dependencies = ["modopt", "numpy", "tqdm", "joblib"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-xdist", "pytest-sugar"]
doc = ["pydata-sphinx-theme", "numpydoc", "sphinx_gallery", "sphinx", "sphinx-autoapi"]
dev = ["black", "isort", "flake8-pyproject", "flake8-black"]

[build-system]
requires = ["setuptools", "wheel"]

######################
# Tool configuration #
######################


#linting using ruff
[tool.ruff]
src = ["src", "tests"]
select = ["E", "F", "B", "Q", "UP", "D"]

ignore = [
"B905", #zip() without an explicit strict= parameter
"B028", #No explicit stacklevel keyword argument found
]
extend-exclude = [ "example_*.py" ]

[tool.ruff.pydocstyle]
convention="numpy"

[tool.coverage.run]
omit = ["*tests*"]

[tool.coverage.report]
precision = 2
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

# Formatting using black.
[tool.black]

[tool.isort]
profile = "black"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--cov=denoiser",
    "--cov-report=term-missing",
]
